# cocos2d-x-3rd-party-libs-bin

./: CMakeLists.txt
Box2D/: CMakeLists.txt
ConvertUTF/: CMakeLists.txt
bullet/: CMakeLists.txt
chipmunk/: CMakeLists.txt
clipper/: CMakeLists.txt
cocos/platform/ohos/napi/modules/: InputNapi.cpp
curl/: CMakeLists.txt
freetype2/: CMakeLists.txt
glfw3/: CMakeLists.txt
jpeg/: CMakeLists.txt
lua/luajit/: CMakeLists.txt
lua/luajit/src/: Makefile
lua/luasocket/: CMakeLists.txt  inet.c  options.c  usocket.c
md5/: CMakeLists.txt
ohos-specific/cpufeatures/: CMakeLists.txt
ohos-specific/pvmp3dec/: CMakeLists.txt
ohos-specific/pvmp3dec/include/: pvmp3decoder_api.h
ohos-specific/tremolo/: CMakeLists.txt
ohos-specific/tremolo/Tremolo/: floor0.c  mapping0.c  res012.c  treminfo.c
openssl/: CMakeLists.txt
png/: CMakeLists.txt
poly2tri/: CMakeLists.txt
spidermonkey/: CMakeLists.txt
spidermonkey/include/ohos/js/: Value.h
sqlite3/: CMakeLists.txt
tests/cpp-tests/Classes/: AppDelegate.cpp
tests/cpp-tests/proj.ohos/entry/src/main/ets/pages/: Index.ets
tests/js-tests/project/proj.ohos/entry/src/main/cpp/types/libentry/: index.d.ts
tests/js-tests/project/proj.ohos/entry/src/main/ets/MainAbility/: MainAbility.ts
tests/js-tests/project/proj.ohos/entry/src/main/ets/components/: CocosEditBox.ets
tests/js-tests/project/proj.ohos/entry/src/main/ets/pages/: Index.ets
tests/js-tests/project/proj.ohos/entry/src/main/ets/workers/: CocosWorker.ts
tests/js-tests/project/proj.ohos/libSysCapabilities/src/main/ets/components/webview/: WebViewMsg.ets
tests/js-tests/project/proj.ohos/libSysCapabilities/src/main/ets/napi/: NapiHelper.ts
tests/lua-tests/project/proj.ohos/entry/src/main/: module.json5
tests/lua-tests/project/proj.ohos/entry/src/main/ets/components/: CocosEditBox.ets
tests/lua-tests/project/proj.ohos/entry/src/main/ets/pages/: Index.ets
tests/lua-tests/project/proj.ohos/entry/src/main/ets/workers/: CocosWorker.ts
tests/lua-tests/project/proj.ohos/libSysCapabilities/src/main/ets/napi/: NapiHelper.ts
tiff/: CMakeLists.txt
unzip/: CMakeLists.txt  ioapi-ohos.cpp  ioapi-ohos.h
uv/: CMakeLists.txt
webp/: CMakeLists.txt
websockets/: CMakeLists.txt
websockets/include/ohos/: libwebsockets.h  lws_config.h
xxtea/: CMakeLists.txt
zlib/: CMakeLists.txt
